--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-fastapi==0.104.1
-uvicorn==0.24.0.post1
-openai-whisper==20230308
-torch==2.2.0
-torchaudio==2.2.0
-python-multipart==0.0.6
-numpy==1.26.2
-python-dotenv==1.0.0
+fastapi
+uvicorn
+openai-whisper
+torch
+torchaudio
+python-multipart
+numpy
+python-dotenv
