--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 fastapi
+slowapi==0.1.8
 uvicorn
 openai-whisper
 torch
@@ -7,4 +8,3 @@ python-multipart
 numpy
 python-dotenv
 psutil
-redis  # For rate limiting and caching
