--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 fastapi
+redis==4.5.5
 slowapi==0.1.8
 uvicorn
 openai-whisper
@@ -7,4 +8,3 @@ torchaudio
 python-multipart
 numpy
 python-dotenv
-psutil
