--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,9 @@ services:
     env_file:
       - .env
     environment:
-      WHISPER_MODEL: ${WHISPER_MODEL:-base}  # Use base model for 4GB RAM
-      API_KEY: ${API_KEY:-default_api_key}
+      # Only essential overrides here
       PORT: ${PORT:-8088}
-      UPLOAD_DIR: ${UPLOAD_DIR:-/app/uploads}
-      DEBUG: ${DEBUG:-false}
-      MAX_FILE_SIZE: ${MAX_FILE_SIZE:-52428800}  # 50MB default
-      ALLOWED_ORIGINS: ${ALLOWED_ORIGINS:-*}
-      RATE_LIMITS: ${RATE_LIMITS:-"10/minute,50/hour"}
+      HOST: ${HOST:-0.0.0.0}
     ports:
       - "8088:8088"
     deploy:
